src/objects/Stage_Sales_Outcome__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Default_Main_Reason__c</fullName>
        <description>Req:5125 - Automatically populate the &quot;Main Reason&quot; based on the Sales Phase</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Default Main Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Phase_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Phase Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Sales_Outcome__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Sales Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stage Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Stage to Sales Outcome</label>
</CustomObject>